--- a/HTML.html
+++ b/HTML.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 <h1>Hello World</h1>
+<p>Nothing much, just profile decoration.</p>
+<p>HTML5 code.</p>
 <script src="JavaScript.js"></script>
 </body>
 </html>
